add main.js, import ts files

--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/task-1.ts"></script>
-    <script type="module" src="./src/task-2.ts"></script>
-    <script type="module" src="./src/task-3.ts"></script>
-    <script type="module" src="./src/task-4.ts"></script>
-    <script type="module" src="./src/task-5.ts"></script>
-    <script type="module" src="./src/task-6.ts"></script>
-    <script type="module" src="./src/task-7.ts"></script>
-    <script type="module" src="./src/task-8.ts"></script>
+    <script type="module" src="./src/mian.js"></script>
+    
   </body>
 </html>
